--- a/map/Lilac12k/Base.lproj/Main.storyboard
+++ b/map/Lilac12k/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G49-xF-z2q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G49-xF-z2q">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
@@ -2785,8 +2785,8 @@ Simply tap "View Previous Runs" to see all saved runs and select one to see your
         <image name="friendsIcon" width="25" height="25"/>
         <image name="homeImage" width="25" height="25"/>
         <image name="infoIcon" width="25" height="25"/>
-        <image name="liveShareOff.png" width="160" height="120"/>
-        <image name="liveShareOn.png" width="160" height="120"/>
+        <image name="liveShareOff.png" width="300" height="107"/>
+        <image name="liveShareOn.png" width="300" height="109"/>
         <image name="mapIcon" width="25" height="25"/>
         <image name="share.png" width="750" height="426"/>
         <image name="spectateOffImg.png" width="160" height="120"/>
